add ESIA Spring Oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftlh
 spring.freemarker.request-context-attribute=rc
 
-spring.security.oauth2.client.registration.github.provider=github
-spring.security.oauth2.client.registration.github.client-id=d1ce2b863fc894632c45
-spring.security.oauth2.client.registration.github.client-secret=9145e440a25d6634d4655065281bd521c8f6ec57
-spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.github.redirect-uri=http://3.236.212.212:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.esia.provider=esia
+spring.security.oauth2.client.registration.esia.scope=
+spring.security.oauth2.client.registration.esia.client-id=
+spring.security.oauth2.client.registration.esia.client-secret=
+spring.security.oauth2.client.registration.esia.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.esia.redirect-uri=
+
