add Google + GitHub Oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.security.oauth2.client.registration.esia.client-secret=
 spring.security.oauth2.client.registration.esia.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.esia.redirect-uri=
 
+#Пример с GitHub. Будет работать со всеми аккаунтами
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+
+#Пример с Google. Будет работать только с разрешенными аккаунтами. Чтобы я добавил вашу почту, напишите в лс
+spring.security.oauth2.client.registration.google.client-id=904802723329-876g20midg7qq260vrnges9mn8rsogeb.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=d1AzMqgEcL9r4wi6DJPYZfMy
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v1/userinfo
+
