--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,15 @@
-db.url=jdbc:postgresql://localhost:5432/postgres
-db.username=postgres
-db.password=postgres
-db.hikari.max-pool-size=10
-db.driver.classname=org.postgresql.Driver
-spring.profile=dev
 
 spring.main.allow-bean-definition-overriding=true
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.suffix=.ftlh
 spring.freemarker.request-context-attribute=rc
 
-spring.security.oauth2.client.registration.esia.provider=esia
-spring.security.oauth2.client.registration.esia.scope=
-spring.security.oauth2.client.registration.esia.client-id=
-spring.security.oauth2.client.registration.esia.client-secret=
-spring.security.oauth2.client.registration.esia.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.esia.redirect-uri=
+#spring.security.oauth2.client.registration.esia.provider=esia
+#spring.security.oauth2.client.registration.esia.scope=
+#spring.security.oauth2.client.registration.esia.client-id=
+#spring.security.oauth2.client.registration.esia.client-secret=
+#spring.security.oauth2.client.registration.esia.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.esia.redirect-uri=
 
 #Пример с GitHub. Будет работать со всеми аккаунтами
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
@@ -27,3 +21,14 @@ spring.security.oauth2.client.registration.google.client-id=904802723329-876g20m
 spring.security.oauth2.client.registration.google.client-secret=d1AzMqgEcL9r4wi6DJPYZfMy
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v1/userinfo
 
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/yanaosharing
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
