--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ spring.datasource.password=411e2e03c83663b131c42df1ba4ddea5e72a16a5208c34c0e9c52
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+##Spring security debugging
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web.FilterChainProxy=Debug
